--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,1 +1,12 @@
 
+.caja1{
+    width: 50%;
+    display: flex;
+    float: left;
+}
+.caja2{
+    display: flex;
+    float: right;
+    margin-top: 2px!important;
+    margin-bottom: 2px!important
+}
